vlib/v/checker/tests/bad_types_in_string_inter_lit.vv
println('${exit(0)}')
println('${char(48)}')
